--- a/sass/main.scss
+++ b/sass/main.scss
@@ -65,13 +65,17 @@ main {
     }
 }
 
-.accueil-menu-1 {
+@mixin accueil-card {
     width: 400px;
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 30px;
-    background-color: $color-menu1;
     box-shadow: 0px 0px 4px 5px #f1f1f1;
+}
+
+.accueil-menu-1 {
+    @include accueil-card;
+    background-color: $color-menu1;
     @media screen and (max-width: 768px) {
         font-size: 0.8em;
     }
@@ -98,12 +102,8 @@ main {
 
 
 .accueil-menu-2 {
-    width: 400px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 30px;
+    @include accueil-card;
     background-color: $color-menu2;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
     @media screen and (max-width: 768px) {
         font-size: 0.8em;
     }
@@ -125,14 +125,11 @@ main {
         transform: scale(1.1);
         opacity: 0.5;
         }
-}
+} 
 
 .accueil-menu-3 {
-    width: 400px;
-    margin-left: 20px;
-    margin-right: 20px;
+    @include accueil-card;
     background-color: $color-menu3;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
     @media screen and (max-width: 768px) {
         font-size: 0.8em;
     }
@@ -153,15 +150,12 @@ main {
         transform: scale(1.1);
         opacity: 0.5;
         }
-}
+} 
 
 .accueil-menu-4 {
-    width: 400px;
-    margin-left: 20px;
-    margin-right: 20px;
+    @include accueil-card;
     background-color: $color-menu4;
-    box-shadow: 0px 0px 4px 5px #f1f1f1;
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 879px) {
         font-size: 0.8em;
         margin-top: 30px;
     }
