--- a/sass/pages/la_palette_du_gout.scss
+++ b/sass/pages/la_palette_du_gout.scss
@@ -26,7 +26,7 @@ header a {
        }
 }
 
-.block__title-4-1 {
+@mixin block-repeat-4 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +37,12 @@ header a {
         padding-left: 10px;
         padding-right: 10px;
     }
-    & h4 {
+}
+
+.block__title-4-1 {
+    @include block-repeat-4;
+    }
+    h4 {
         padding-left: 50px;
         padding-right: 50px;
         font-size: 1.5em;
@@ -80,24 +85,15 @@ h4:before {
         transform-origin: left;
         transition:all 600ms ease-in-out;
     }
-    & h4:hover:before {
+    h4:hover:before {
         visibility:visible;
         transform:scaleX(1)
-    }
 }
 
 .block__title-4-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    @media screen and (max-width: 768px) {
-        font-size: 0.6em;
-        padding-left: 10px;
-        padding-right: 10px;
+    @include block-repeat-4;
     }
-    & h4 {
+    h4 {
         padding-left: 50px;
         padding-right: 50px;
         font-size: 1.5em;
@@ -134,24 +130,15 @@ h4:before {
         transform-origin: left;
         transition:all 600ms ease-in-out;
     }
-    & h4:hover:before {
+    h4:hover:before {
         visibility:visible;
         transform:scaleX(1)
-    }
 }
 
 .block__title-4-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    @media screen and (max-width: 768px) {
-        font-size: 0.6em;
-        padding-left: 10px;
-        padding-right: 10px;
+    @include block-repeat-4;
     }
-    & h4 {
+    h4 {
         padding-left: 50px;
         padding-right: 50px;
         font-size: 1.5em;
@@ -188,11 +175,10 @@ h4:before {
         transform-origin: left;
         transition:all 600ms ease-in-out;
     }
-    & h4:hover:before {
+    h4:hover:before {
         visibility:visible;
         transform:scaleX(1)
     }
-}
 
 .section__header-4 {
     text-align: center;
@@ -239,4 +225,4 @@ h4:before {
     & .price-4 {
         padding-left: 20px;
     }
-}
+} 
